Working on layout issues with form elements
I am working on specific layout issue with the first PAMS screen and
attempting to use bootsrap to make it work.

--- a/PAMS/bootstrap/docs/assets/css/pams.css
+++ b/PAMS/bootstrap/docs/assets/css/pams.css
@@ -21,3 +21,12 @@
 .selectLabelTop{
     margin-left:475px !important;
 }
+#noteRequired{
+    margin-left:20px !important;
+}
+.labelRight{
+    text-align:right;
+}
+.labelCenter{
+    text-align:center;
+}
